--- a/mernCommentBox/package.json
+++ b/mernCommentBox/package.json
@@ -6,6 +6,13 @@
     "react-scripts": "0.8.3"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "foreman": "^2.0.0",
+    "marked": "^0.3.6",
+    "mongoose": "^4.7.2",
+    "nodemon": "^1.11.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
